force-app/main/default/objects/Mid_Year_Review__c/Mid_Year_Review__c.object-meta.xml
<CustomObject>
    <description>Mid-Year Reviews</description>
    <label>Mid-Year Review</label>
    <nameField>
        <displayFormat>MYR{000000}</displayFormat>
        <label>Mid-Year Review No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mid-Year Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>