force-app/main/default/objects/Mid_Year_Review__c/fields/Approver_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Approver_Current_User__c</fullName>
    <formula>IF(Performance_Lead_User__r.Id =  $User.Id, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver = Current User</label>
    <type>Checkbox</type>
</CustomField>