force-app/main/default/objects/Mid_Year_Review__c/fields/Consensus_Notes__c.field-meta.xml
<CustomField>
    <fullName>Consensus_Notes__c</fullName>
    <label>Consensus Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>