force-app/main/default/objects/Mid_Year_Review__c/fields/Current_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Current_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Promotion</label>
    <type>Checkbox</type>
</CustomField>