force-app/main/default/objects/Mid_Year_Review__c/fields/D_Utilization_Rating__c.field-meta.xml
<CustomField>
    <fullName>D_Utilization_Rating__c</fullName>
    <formula>IF(AND(Job_Title_Static__c = &quot;Director&quot;,  Utilization_YTD__c  &gt;= 0.95), 5, 
IF(AND(Job_Title_Static__c = &quot;Director&quot;,  Utilization_YTD__c  &gt;= 0.85, Utilization_YTD__c   &lt;  0.95), 4,
IF(AND(Job_Title_Static__c = &quot;Director&quot;,  Utilization_YTD__c  &gt;= 0.75, Utilization_YTD__c   &lt;  0.85), 3,
IF(AND(Job_Title_Static__c = &quot;Director&quot;,  Utilization_YTD__c  &gt;= 0.65, Utilization_YTD__c   &lt;  0.75), 2,
IF(AND(Job_Title_Static__c = &quot;Director&quot;,  Utilization_YTD__c  &gt;= 0.00, Utilization_YTD__c   &lt;  0.65), 1, 0
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D Utilization Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>