force-app/main/default/objects/Mid_Year_Review__c/fields/DC_Manager_Value__c.field-meta.xml
<CustomField>
    <fullName>DC_Manager_Value__c</fullName>
    <formula>IF( BA_D_STATIC__c  = TRUE, DC_Managing_Director_Value__c, DC_Performance_Lead_Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DC Manager Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>