force-app/main/default/objects/Mid_Year_Review__c/fields/Definition_AO__c.field-meta.xml
<CustomField>
    <fullName>Definition_AO__c</fullName>
    <defaultValue>&quot;Delivery and execution driving client value through Advanced Operations and Business Model transformation using Advanced Analytics and Digital tools.&quot;</defaultValue>
    <label>Definition</label>
    <type>TextArea</type>
</CustomField>