force-app/main/default/objects/Mid_Year_Review__c/fields/Definition_BC__c.field-meta.xml
<CustomField>
    <fullName>Definition_BC__c</fullName>
    <defaultValue>&quot;Contribute to Sales &amp; Account Development across the firm by growing existing clients through quality delivery/introductions to new SSA offerings and by leveraging your network for new relationships and opportunities.&quot;</defaultValue>
    <label>Definition</label>
    <type>TextArea</type>
</CustomField>