force-app/main/default/objects/Mid_Year_Review__c/fields/Definition_DC__c.field-meta.xml
<CustomField>
    <fullName>Definition_DC__c</fullName>
    <defaultValue>&quot;Continuous collaboration across the firm bringing the best of SSA to each client and firm development.&quot;</defaultValue>
    <label>Definition</label>
    <type>TextArea</type>
</CustomField>