force-app/main/default/objects/Mid_Year_Review__c/fields/Evaluation_year__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_year__c</fullName>
    <label>Evaluation Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2017</fullName>
            </value>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
                <default>true</default>
                <label>2020</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>