force-app/main/default/objects/Mid_Year_Review__c/fields/Goal_2_BC__c.field-meta.xml
<CustomField>
    <fullName>Goal_2_BC__c</fullName>
    <label>Goal 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>