force-app/main/default/objects/Mid_Year_Review__c/fields/Goal_5_AO__c.field-meta.xml
<CustomField>
    <fullName>Goal_5_AO__c</fullName>
    <label>Goal 5</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>