force-app/main/default/objects/Mid_Year_Review__c/fields/Last_Promotion_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Promotion_Date__c</fullName>
    <label>Last Promotion Date</label>
    <type>Date</type>
</CustomField>