force-app/main/default/objects/Mid_Year_Review__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ashcroft, Paul</fullName>
            </value>
            <value>
                <fullName>Burke, Ashley</fullName>
            </value>
            <value>
                <fullName>Dix, Wayne</fullName>
            </value>
            <value>
                <fullName>Evans, Sharlene</fullName>
            </value>
            <value>
                <fullName>Kramer, Nick</fullName>
            </value>
            <value>
                <fullName>Miller, David</fullName>
            </value>
            <value>
                <fullName>Rodgers, John</fullName>
            </value>
            <value>
                <fullName>Sachdeva, Sachin</fullName>
            </value>
            <value>
                <fullName>Silvers, Bob</fullName>
            </value>
            <value>
                <fullName>Thangavelsamy, Raj</fullName>
            </value>
            <value>
                <fullName>Asbeck, Fred</fullName>
            </value>
            <value>
                <fullName>Houser, Dan</fullName>
            </value>
            <value>
                <fullName>Niles, Dave</fullName>
            </value>
            <value>
                <fullName>Meil, Jason</fullName>
            </value>
            <value>
                <fullName>Silvers, Jennifer</fullName>
            </value>
            <value>
                <fullName>Schiele, Kim</fullName>
            </value>
            <value>
                <fullName>Makhmali, Nika</fullName>
            </value>
            <value>
                <fullName>Miller, Scott</fullName>
            </value>
            <value>
                <fullName>Madden, Tricia</fullName>
            </value>
            <value>
                <fullName>Krajacic, Jeff</fullName>
            </value>
            <value>
                <fullName>Katz, Matt</fullName>
            </value>
            <value>
                <fullName>Brown, Reuben</fullName>
            </value>
            <value>
                <fullName>Muhota, Kim</fullName>
            </value>
            <value>
                <fullName>Bloomfield, Jon</fullName>
                <isActive>false</isActive>
                <label>Bloomfield, Jon</label>
            </value>
            <value>
                <fullName>Costa, Rafael</fullName>
                <isActive>false</isActive>
                <label>Costa, Rafael</label>
            </value>
            <value>
                <fullName>Covelli, John</fullName>
                <isActive>false</isActive>
                <label>Covelli, John</label>
            </value>
            <value>
                <fullName>Homann, Stefan</fullName>
                <isActive>false</isActive>
                <label>Homann, Stefan</label>
            </value>
            <value>
                <fullName>Kaiser, Thomas</fullName>
                <isActive>false</isActive>
                <label>Kaiser, Thomas</label>
            </value>
            <value>
                <fullName>Kaufmann, Julian</fullName>
                <isActive>false</isActive>
                <label>Kaufmann, Julian</label>
            </value>
            <value>
                <fullName>Lawrence, Chuck</fullName>
                <isActive>false</isActive>
                <label>Lawrence, Chuck</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>