force-app/main/default/objects/Mid_Year_Review__c/fields/Manager_Rating_Value_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Manager_Rating_Value_Weighted__c</fullName>
    <label>Manager Rating Value Weighted</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>