force-app/main/default/objects/Mid_Year_Review__c/fields/Managing_Director_Rating_DC__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director_Rating_DC__c</fullName>
    <label>Managing Director Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>