force-app/main/default/objects/Mid_Year_Review__c/fields/MD_Current_User__c.field-meta.xml
<CustomField>
    <fullName>MD_Current_User__c</fullName>
    <formula>$User.Id = Managing_Director_User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MD = Current User</label>
    <type>Checkbox</type>
</CustomField>