force-app/main/default/objects/Mid_Year_Review__c/fields/MD_Rating_Value_Weighted__c.field-meta.xml
<CustomField>
    <fullName>MD_Rating_Value_Weighted__c</fullName>
    <formula>IF( 
AND(SD_VP_STATIC__c = TRUE, OR(Job_Title__c = &quot;Associate Consultant&quot; ,Job_Title__c =  &quot;Associate Director&quot; , Job_Title__c = &quot;Director&quot;)), ((AO_Managing_Director_Value__c *0.45) + (BC_Managing_Director_Value__c * 0.10 ) + ( DC_Managing_Director_Value__c * 0.15) + ( Utilization_Rating__c * 0.30)), 
IF(AND(SD_VP_STATIC__c = TRUE, OR(Job_Title_Static__c = &quot;Business Analyst&quot;, Job_Title_Static__c = &quot;Executive Assistant&quot;)), (( AO_Managing_Director_Value__c *0.75) + (BC_Managing_Director_Value__c * 0.10 ) + ( DC_Managing_Director_Value__c * 0.15)),
IF(
AND(SD_VP_STATIC__c = TRUE, OR(Job_Title__c = &quot;Senior Director&quot;, Job_Title__c = &quot;Vice President&quot;)), 
 (( AO_Managing_Director_Value__c *0.50) + (BC_Managing_Director_Value__c * 0.15 ) + ( DC_Managing_Director_Value__c * 0.15) + ( Utilization_Rating__c * 0.20)), 0.00)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Rating: MD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>