force-app/main/default/objects/Mid_Year_Review__c/fields/Metric_1_DC__c.field-meta.xml
<CustomField>
    <fullName>Metric_1_DC__c</fullName>
    <label>Metric 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>