force-app/main/default/objects/Mid_Year_Review__c/fields/Metric_4_AO__c.field-meta.xml
<CustomField>
    <fullName>Metric_4_AO__c</fullName>
    <label>Metric 4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>