force-app/main/default/objects/Mid_Year_Review__c/fields/My_Projects__c.field-meta.xml
<CustomField>
    <fullName>My_Projects__c</fullName>
    <inlineHelpText>Please list the projects you have served on to-date (incl. current engagements) this year, with a brief (e.g., 1-2 sentence) summary of your role and contributions.</inlineHelpText>
    <label>My Projects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>