force-app/main/default/objects/Mid_Year_Review__c/fields/PDO_TEAM_MEMBER__c.field-meta.xml
<CustomField>
    <fullName>PDO_TEAM_MEMBER__c</fullName>
    <formula>FALSE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDO TEAM MEMBER</label>
    <type>Checkbox</type>
</CustomField>