force-app/main/default/objects/Mid_Year_Review__c/fields/Performance_Lead_Comment_AO_4_Level__c.field-meta.xml
<CustomField>
    <fullName>Performance_Lead_Comment_AO_4_Level__c</fullName>
    <label>Performance Lead Comment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>