force-app/main/default/objects/Mid_Year_Review__c/fields/Performance_Lead_Rating_AO__c.field-meta.xml
<CustomField>
    <fullName>Performance_Lead_Rating_AO__c</fullName>
    <inlineHelpText>5 - Significantly Exceeds Expectations
4 - Exceeds Expectations 
3 - Meets Expectations 
2 - Meets Some Expectations 
1 - Not Meeting Expectations</inlineHelpText>
    <label>Performance Lead Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>