force-app/main/default/objects/Mid_Year_Review__c/fields/Performance_Lead_User__c.field-meta.xml
<CustomField>
    <fullName>Performance_Lead_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Mid_Year_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>