force-app/main/default/objects/Mid_Year_Review__c/fields/PL_Rating_Value_Weighted__c.field-meta.xml
<CustomField>
    <fullName>PL_Rating_Value_Weighted__c</fullName>
    <formula>IF(Job_Title__c = &quot;Business Analyst&quot; , (( AO_Performance_Lead_Value__c *0.55) + (BC_Performance_Lead_Value__c * 0.10 ) + ( DC_Performance_Lead_Value__c * 0.15) + ( Utilization_Rating__c * 0.20)), 

IF(OR(Job_Title__c = &quot;Associate Consultant&quot; , Job_Title__c = &quot;Associate Director&quot; , Job_Title__c = &quot;Director&quot;), (( AO_Performance_Lead_Value__c *0.45) + (BC_Performance_Lead_Value__c * 0.10 ) + ( DC_Performance_Lead_Value__c * 0.15) + ( Utilization_Rating__c * 0.30)), 

IF(SD_VP_STATIC__c = TRUE, (( AO_Performance_Lead_Value__c *0.50) + (BC_Performance_Lead_Value__c * 0.15) + ( DC_Performance_Lead_Value__c * 0.15) + ( Utilization_Rating__c * 0.20)), (( AO_Performance_Lead_Value__c *0.20) + (BC_Performance_Lead_Value__c * 0.20 ) + ( DC_Performance_Lead_Value__c * 0.60)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Rating: PL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>