force-app/main/default/objects/Mid_Year_Review__c/fields/Practice_Owner__c.field-meta.xml
<CustomField>
    <fullName>Practice_Owner__c</fullName>
    <formula>IF( OR(CreatedBy.Id = &quot;005F0000005t2Sm&quot; , CreatedBy.Id = &quot;005F0000007fFMD&quot;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Owner</label>
    <type>Checkbox</type>
</CustomField>