force-app/main/default/objects/Mid_Year_Review__c/fields/Previous_Evaluation_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Previous_Evaluation_Value_2__c</fullName>
    <label>MY</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>