force-app/main/default/objects/Mid_Year_Review__c/fields/Recommended_for_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Recommended_for_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommended for Promotion</label>
    <type>Checkbox</type>
</CustomField>