force-app/main/default/objects/Mid_Year_Review__c/fields/Revenue_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Under_Management__c</fullName>
    <label>Revenue Under Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>