force-app/main/default/objects/Mid_Year_Review__c/fields/SD_VP_STATIC__c.field-meta.xml
<CustomField>
    <fullName>SD_VP_STATIC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SD - VP STATIC</label>
    <type>Checkbox</type>
</CustomField>