force-app/main/default/objects/Mid_Year_Review__c/fields/Self_Evaluation_Comment_3_DC__c.field-meta.xml
<CustomField>
    <fullName>Self_Evaluation_Comment_3_DC__c</fullName>
    <label>Self Evaluation Comment 3</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>